k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dostt-frontend-svc
  namespace: default
spec:
  selector:
    app: dostt-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
